# Mairie-Cadeaux

./: .env.dev  .gitignore  README.md  app.py  pyproject.toml
data/: gifts.json  homes.json  mails.json  mairie.db  shipments.json
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/component/: table.jsx
frontend/src/pages/: HomeAddPage.jsx  HomeEditPage.jsx  HomeListPage.jsx  HomePage.jsx  ShipmentsList.jsx
mairie_cadeaux/: .gitignore  main.py  pyproject.toml
mairie_cadeaux/data/: cadeaux.json  envois.json  foyers.json  gifts.json  mails.json
mairie_cadeaux/frontend/: package-lock.json  package.json  vite.config.js
mairie_cadeaux/frontend/src/: App.jsx
src/: app.py  config.py  database.py  main.py  utils.py
src/models/: gifts.py  home.py  shipments.py
src/routes/: gifts_routes.py  homes_routes.py  shipments_routes.py
src/services/: gift_service.py  homes_service.py  shipments_service.py
