[project]
name = "mairie-cadeaux"
version = "0.1.0"
description = "Application de gestion des foyers et cadeaux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
]

[project.scripts]
app = "src.main:main"
backend = "src.main:run_backend"
database = "src.main:import_database"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["."]